--- a/eas.json
+++ b/eas.json
@@ -19,7 +19,8 @@
       "channel": "preview"
     },
     "production": {
-      "channel": "production"
+      "channel": "production",
+      "autoIncrement": true
     }
   },
   "submit": {
